--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,46 @@
-<p>about works!</p>
+<div id="about">
+    <div class="about-image">
+        <img src="/assets/Icons/profile-illustration.png">
+    </div>
+    <div id="about-body">
+        <div class="about-name">
+        <span class="name">Paul Calimache</span>
+        <span class="situation">French IT student.</span>
+        <div class="about-actively">
+            <span class="looking">Actively looking for internship</span>
+            <img src="/assets/Icons/eye.gif" width="100px" alt="This will display an animated GIF"/>
+        </div>
+        </div>
+        <div class="about-profile">
+            <div class="profile-cta">
+                <div>
+                    <span class="discover">Discover my profile</span>
+                    <span class="discover-cats">Profile | Education & Experience | Skills</span>
+                </div>
+                <svg class="arrows">
+                    <path class="a1" d="M0 0 L15 16 L30 0"></path>
+                    <path class="a2" d="M0 10 L15 26 L30 10"></path>
+                    <path class="a3" d="M0 20 L15 36 L30 20"></path>
+                </svg>
+            </div>
+            <div class="profile-intro">
+                <div class="intro-text">
+                    <h2>Hello !</h2>
+                    <span>I’m Paul Calimache,</span> 
+                    <span>
+                        A 21 years old french student living in Toulouse.
+                        Actually I'm studying IT in an engineer school named CESI and also I'm working in apprenticeship as software engineer at Thales Alenia Space a space company.
+                    </span>
+                    <h2 class="lookingfor">Looking for ...</h2>
+                    <span>To validate my degree I have to do an internship in another country.</span>
+                    <span>
+                        If your company is in IT world and looking for an intership you can contact me through the <a href="/contact">contact page</a>.
+                    </span>
+                </div>
+                <div class="WhatIdo">
+                    What I do :
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
