--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,1 +1,6 @@
-<p>work works!</p>
+<div class="work">
+    <h1> workComponent works !<button>+</button></h1>
+    <div v-if="isDetail" id="work-detail">
+        <p>ceci est un paragraphe</p>
+    </div>
+</div>
