--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -37,8 +37,75 @@
                         If your company is in IT world and looking for an intership you can contact me through the <a href="/contact">contact page</a>.
                     </span>
                 </div>
-                <div class="WhatIdo">
-                    What I do :
+                <div class="cursus">
+                    <h2 class="center">Education & experiences</h2>
+                    <div class="timeline">
+                        <div class="t-date">2016 - 2019</div>
+                        <div class="t-path">
+                            <div class="t-dot"></div>
+                            <div class="t-line"></div>
+                        </div>
+                        <div class="t-text">
+                            <span class="t-title">French High-School diploma, Science major</span>
+                            <span>High-School Borde Basse</span>
+                            <span class="italic">Castres, France</span>
+                        </div>
+                    </div>
+                    <div class="t-preline"></div>
+                    <div class="timeline">
+                        <div class="t-date">2019 - 2021</div>
+                        <div class="t-path">
+                            <div class="t-dot"></div>
+                            <div class="t-line"></div>
+                        </div>
+                        <div class="t-text">
+                            <span class="t-title">Integrated preparatory cycle for engineer school</span>
+                            <span>CESI Engineer school</span>
+                            <span class="italic">Toulouse, France</span>
+                        </div>
+                    </div>
+                    <div class="t-preline"></div>
+                    <div class="timeline">
+                        <div class="t-date">2021</div>
+                        <div class="t-path">
+                            <div class="t-dot"></div>
+                            <div class="t-line"></div>
+                        </div>
+                        <div class="t-text">
+                            <span class="t-title">Web developer Full Stack (intern)</span>
+                            <span>Tarnaise des panneaux</span>
+                            <span class="italic">Labruguière, France</span>
+                            <span>- Concept a postgre database</span>
+                            <span>- Create a web application (JS / PHP)</span>
+                        </div>
+                    </div>
+                    <div class="t-preline"></div>
+                    <div class="timeline">
+                        <div class="t-date">2021 - 2024</div>
+                        <div class="t-path">
+                            <div class="t-dot"></div>
+                            <div class="t-line"></div>
+                        </div>
+                        <div class="t-text">
+                            <span class="t-title">Engineer school IT major</span>
+                            <span>CESI Engineer school</span>
+                            <span class="italic">Toulouse, France</span>
+                            <span class="t-title and">&</span>
+                            <span class="t-title">Apprentice software engineer</span>
+                            <span>Thales Alenia Space</span>
+                            <span class="italic">Toulouse, France</span>
+                            <span>- Participate in the development of a web application</span>
+                            <span>- Write unit tests & end to end tests</span>
+                            <span>- Build CI/CD pipelines</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <h2 class="center">Skills</h2>
+                    <p>
+                        aaaaaaaaa
+                        aaaaaaaaaa
+                    </p>
                 </div>
             </div>
         </div>
