--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -100,12 +100,31 @@
                         </div>
                     </div>
                 </div>
+                <h2 class="center">Skills</h2>
                 <div class="skills">
-                    <h2 class="center">Skills</h2>
-                    <p>
-                        aaaaaaaaa
-                        aaaaaaaaaa
-                    </p>
+                    <div class="skill">
+                        <span class="s-title">Front-end</span>
+                        <span>HTML / CSS</span>
+                        <span>JavaScript / TypeScript</span>
+                        <span>Angular Framework</span>
+                    </div>
+                    <div class="skill">
+                        <span class="s-title">Backend-end</span>
+                        <span>PHP / Golang</span>
+                    </div>
+                    <div class="skill">
+                        <span class="s-title">Others</span>
+                        <span>C / C# / c++</span>
+                    </div>
+                    <div class="skill">
+                        <span class="s-title">Database</span>
+                        <span>MySQL / Postgre / SqlServer</span>
+                    </div>
+                    <div class="skill">
+                        <span class="s-title">Workflow</span>
+                        <span>Git / Gitlab / Azure DevOps</span>
+                        <span>AGILE & SAFE method</span>
+                    </div>
                 </div>
             </div>
         </div>
