--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -14,7 +14,7 @@
     border-radius:20px 20px 0 0;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
     width:100%;
-    padding-top:10px;
+    padding-top:30px;
     z-index:1;
   }
   .about-name {
@@ -159,4 +159,23 @@
 }
 .and {
   margin:10px 0px;
+}
+
+.skills {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap:20px;
+  justify-items:center;
+  font-size: 14px;
+  .skill {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .s-title {
+      width:fit-content;
+      margin-bottom: 5px;
+      border-bottom: 1px solid black;
+      font-size: 16px;
+    }
+  }
 }
