--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,6 +1,30 @@
 <div class="work">
-    <h1> workComponent works !<button>+</button></h1>
-    <div v-if="isDetail" id="work-detail">
-        <p>ceci est un paragraphe</p>
+    <h1> Works I realized</h1>
+    <div class="w-item">
+        <div class="w-left">
+            <img class="w-icon" src="/assets/Icons/resume.svg">
+            <div class="w-preview">
+                <span class="w-title">Website portfolio</span>
+                <span>I made a portfolio website with angular</span>
+                <div class="w-tag"></div>
+            </div>
+        </div>
+        <div class="w-more">
+            <a href="" class="more-clic">+</a>
+        </div>
+    </div>
+    <!---->
+    <div class="w-item">
+        <div class="w-left">
+            <img class="w-icon" src="/assets/Icons/resume.svg">
+            <div class="w-preview">
+                <span class="w-title">Website portfolio</span>
+                <span>I made a previous portfolio website</span>
+                <div class="w-tag"></div>
+            </div>
+        </div>
+        <div class="w-more">
+            <a href="" class="more-clic">+</a>
+        </div>
     </div>
 </div>
