--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -7,6 +7,7 @@
     width:100%;
     padding-top:20px;
     z-index:0;
+    margin-bottom: 20px;
   }
   #about-body {
     position: relative;
@@ -14,7 +15,7 @@
     border-radius:20px 20px 0 0;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
     width:100%;
-    padding-top:30px;
+    padding-top:20px;
     z-index:1;
   }
   .about-name {
