--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -31,10 +31,10 @@
                         A 21 years old french student living in Toulouse.
                         Actually I'm studying IT in an engineer school named CESI and also I'm working in apprenticeship as software engineer at Thales Alenia Space a space company.
                     </span>
-                    <h2 class="lookingfor">Looking for ...</h2>
+                    <h3 class="lookingfor">Looking for ...</h3>
                     <span>To validate my degree I have to do an internship in another country.</span>
                     <span>
-                        If your company is in IT world and looking for an intership you can contact me through the <a href="/contact">contact page</a>.
+                        If your company is in IT world and looking for an intership you can contact me through the <a href="/contact" class="bc">contact page</a>.
                     </span>
                 </div>
                 <div class="cursus">
