--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,3 +34,12 @@
   a::after {
     text-decoration: none;
   }
+
+  @media screen and (max-width: 400px) {
+    main {
+      width:100vw;
+      height:100vh;
+      border:0px;
+      border-radius: 0px;
+    }
+  }
