link for easySave project

--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -37,9 +37,9 @@
                 <div class="w-tag"><span>#.NET</span><span>#C#</span><span>#OOP</span></div>
             </div>
         </div>
-        <!--<div class="w-more">
-            <a href="" class="more-clic">+</a>
-        </div>-->
+        <div class="w-more">
+            <a href="https://github.com/malmax0/-EasySave/" class="more-clic">+</a>
+        </div>
     </div>
     <!---->
     <div class="w-item">
