background setting page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,5 +8,6 @@
     <a href="https://www.linkedin.com/in/paul-calimache/" target="_blank">
         <app-appli [data]="Linkedin"></app-appli>
     </a>
+    <a (click)="changePage('/settings', Settings[2])"><app-appli [data]="Settings"></app-appli></a>
     <div id="fader"></div>
   </div>
