--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     //background-color: rgb(217, 201, 191);
-    background-color: rgb(18,29,37);
+    //background-color: rgb(18,29,37);
   }
 
   a {
