--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="home">
+<div id="home" [style.backgroundImage]="'url('+backgroundImage+')'">
     <a (click)="changePage('/about', About[2])"><app-appli [data]="About"></app-appli></a>
     <a (click)="changePage('/work', Work[2])"><app-appli [data]="Work"></app-appli></a>
     <a (click)="changePage('/contact', Contact[2])"><app-appli [data]="Contact"></app-appli></a>
