--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,10 +1,10 @@
 <div id="settings" [ngStyle]="{'background-color': BG_COLOR}">
-    <div class="carousel">
-        <img class="bg-image" src="{{Background.path}}" width="100%" height="100%"/>
-        <mat-icon *ngIf="Background.isActive" class="iconActive material-symbols-outlined">check_circle</mat-icon>
+    <h1>Wallpaper settings</h1>
+    <div class="carousel" (click)="selectWallpaper(WallpaperList[Index])">
+        <img class="bg-image" [style.border]="isActiveWallpaper(WallpaperList[Index])" src="{{WallpaperList[Index].path}}"/>
     </div>
     <div class="bg-switch">
-        <mat-icon class="bg-previous"(click)="bgPrevious(Background)">chevron_left</mat-icon>
-        <mat-icon class="bg-next" (click)="bgNext(Background)">chevron_right</mat-icon>
+        <mat-icon class="bg-previous" (click)="wpPrevious()">chevron_left</mat-icon>
+        <mat-icon class="bg-next" (click)="wpNext()">chevron_right</mat-icon>
     </div>
 </div>
