--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -7,4 +7,5 @@
         <mat-icon class="bg-previous" (click)="wpPrevious()">chevron_left</mat-icon>
         <mat-icon class="bg-next" (click)="wpNext()">chevron_right</mat-icon>
     </div>
+    <span class="text-info" *ngIf="modifyEvent">Wallpaper successfully modified !</span>
 </div>
