--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,16 +11,36 @@
     display: none;
 }
 
+#top-bar {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  width: inherit;
+  position: fixed;
+  .top-bar-left {
+    align-self: center;
+    place-self: center;
+    .date {
+      color:white;
+    }
+  }
   #notch {
-    position: fixed;
-    left:50%;
-    transform: translateX(-50%);
     width:180px;
-    height:20px;
+    height:22px;
     border-radius: 0 0 15px 15px;
     background-color: black;
     z-index: 1;
   }
+  .top-bar-right {
+    align-self: center;
+    place-self: center stretch;
+    display: flex;
+    column-gap: 12px;
+    color:white;
+    mat-icon {
+      font-size: 20px;
+    }
+  }
+}
   #backHome {
     position:fixed;
     left:inherit;
