--- a/src/app/work/work.component.scss
+++ b/src/app/work/work.component.scss
@@ -1,52 +1,48 @@
 .work {
-    width:100%;
+    // width:100%;
     height:100%;
     background-color: rgb(247, 214, 224);
     overflow: hidden;
+    padding: 0 20px;
     h1 {
         text-align:center;
         margin-top:40px;
     }
     .w-item {
         display: flex;
-        justify-content: space-between;
-        margin:0px  20px;
-        padding: 10px 0px;
+        padding:10px 0px;
         border-bottom:1px black solid;
-        column-gap: 20px;
-        .w-left {
+        column-gap: 10px;
+        .item-main {
             display: flex;
-            column-gap: 10px;
-            .w-preview {
-                display: flex;
-                flex-direction: column;
-                font-size: 14px;
-                row-gap:5px;
-                .w-title {
-                    font-size: 20px;
-                }
-                .w-tag {
-                    display:flex;
-                    column-gap:10px;
-                    span {
-                        border-bottom:1px black solid;
-                    }
-                }
+            flex-direction: column;
+            font-size: 14px;
+            row-gap:5px;
+            .w-title {
+                font-size: 20px;
             }
-            .w-icon {
-                width:50px;
+            .w-tag {
+                display:flex;
+                flex-wrap: wrap;
+                column-gap:10px;
+                row-gap: 5px;
+                span {
+                    border-bottom:1px black solid;
+                }
             }
         }
-        .w-more {
-            font-size: 32px;
-            display: flex;
-            align-items: center;
-            .more-clic {
-                color:black;
-            }
-            .more-clic:hover {
-                cursor: pointer;
-            }
+        .w-icon {
+            width:50px;
+        }
+    }
+    .w-action {
+        display: flex;
+        align-items: center;
+        .action-clic {
+            color:black;
+        }
+        .action-clic:hover {
+            cursor: pointer;
         }
     }
 }
