Update cv informations

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -94,9 +94,15 @@
                             <span class="t-title">Apprentice software engineer</span>
                             <span>Thales Alenia Space</span>
                             <span class="italic">Toulouse, France</span>
-                            <span>- Participate in the development of a web application</span>
-                            <span>- Write unit tests & end to end tests</span>
-                            <span>- Build CI/CD pipelines</span>
+                            <span>- Development of a web application :
+                                <ul>
+                                    <li>Fullstack development : Angular front-end, Golang microservices</li>
+                                    <li>Unit tests & end to end tests (cypress + cucumber)</li>
+                                    <li>Build CI/CD pipelines</li>
+                                    <li>Containerization with Docker & deployment with Kubernetes</li>
+                                </ul>
+                            </span>
+                            <span>- Work in an AGILE & SAFe environment</span>
                         </div>
                     </div>
                 </div>
@@ -110,11 +116,15 @@
                     </div>
                     <div class="skill">
                         <span class="s-title">Backend-end</span>
-                        <span>PHP / Golang</span>
+                        <span>JavaScript / Golang / PHP</span>
                     </div>
                     <div class="skill">
-                        <span class="s-title">Others</span>
+                        <span class="s-title">Others languages</span>
                         <span>C / C# / c++</span>
+                    </div>
+                    <div class="skill">
+                        <span class="s-title">DevOps</span>
+                        <span>Docker / Kubernetes</span>
                     </div>
                     <div class="skill">
                         <span class="s-title">Database</span>
