--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,3 +12,4 @@
   <a id="backHome" [routerLink]="['/']" *ngIf="!IsHomePage"><img src="https://www.svgrepo.com/show/77532/left-arrow-sketch.svg" width="40" height="40"></a>
   <router-outlet></router-outlet>
 </main>
+<div id="signature">Handmade by Paul CALIMACHE</div>
