--- a/src/app/work/work.component.scss
+++ b/src/app/work/work.component.scss
@@ -1,55 +1,12 @@
 .work {
     // width:100%;
-    height:100%;
+    min-height: 100%;
     background-color: rgb(247, 214, 224);
-    overflow: hidden;
     padding: 0 20px;
+    display: flex;
+    flex-direction: column;
     h1 {
         text-align:center;
         margin-top:40px;
-    }
-    .w-item {
-        display: flex;
-        padding:10px 0px;
-        border-bottom:1px black solid;
-        column-gap: 10px;
-        .item-main {
-            display: flex;
-            flex-direction: column;
-            font-size: 14px;
-            row-gap:5px;
-            .w-title {
-                font-size: 20px;
-            }
-            .w-tag {
-                display:flex;
-                flex-wrap: wrap;
-                column-gap:10px;
-                row-gap: 5px;
-                span {
-                    border-bottom:1px black solid;
-                }
-            }
-        }
-        .w-icon {
-            width:50px;
-        }
-    }
-    .w-action {
-        display: flex;
-        align-items: center;
-        .action-clic {
-            color:black;
-        }
-        .action-clic:hover {
-            cursor: pointer;
-        }
-    }
-}
-
-.action-rmore {
-    font-weight: bold;
-    :hover {
-        cursor: pointer;
     }
 }
